make the tutorials cute

--- a/docs/notebooks/config.ipynb
+++ b/docs/notebooks/config.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e9d0349f",
+   "metadata": {},
+   "source": [
+    "# The `config` File"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "b60108b3",
@@ -32,7 +40,7 @@
    "id": "715c6497",
    "metadata": {},
    "source": [
-    "# Load package provided config"
+    "## Load package provided config"
    ]
   },
   {
