provide example data

--- a/docs/examples/data.ipynb
+++ b/docs/examples/data.ipynb
@@ -393,7 +393,7 @@
    ],
    "source": [
     "simulated_data = DataSet(counts, annotation)\n",
-    "print(f\"simulated_data contains {simulated_data.nsamples} samples\")\n",
+    "print(f\"simulated_data contains {simulated_data.n_samples} samples\")\n",
     "print(simulated_data.ids[0:5])"
    ]
   },
@@ -423,7 +423,7 @@
     "signatures = pd.read_csv(\"https://cancer.sanger.ac.uk/signatures/documents/452/COSMIC_v3.2_SBS_GRCh37.txt\", sep='\\t', index_col=0 , header=0)\n",
     "\n",
     "COSMIC = SignatureSet(signatures.T)\n",
-    "print(f\"COSMIC contains {COSMIC.nsigs} signatures\")"
+    "print(f\"COSMIC contains {COSMIC.n_sigs} signatures\")"
    ]
   },
   {
