--- a/docs/examples/data.ipynb
+++ b/docs/examples/data.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -247,9 +247,18 @@
        "[5 rows x 96 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -278,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -314,18 +323,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>simulated_sample_1</th>\n",
-       "      <td>Breast-AdenoCA</td>\n",
+       "      <td>ColoRect-AdenoCA</td>\n",
        "      <td>primary</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>simulated_sample_2</th>\n",
-       "      <td>ColoRect-AdenoCA</td>\n",
-       "      <td>primary</td>\n",
+       "      <td>Kidney-RCC</td>\n",
+       "      <td>metastatic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>simulated_sample_3</th>\n",
-       "      <td>ColoRect-AdenoCA</td>\n",
-       "      <td>metastatic</td>\n",
+       "      <td>Kidney-RCC</td>\n",
+       "      <td>primary</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>simulated_sample_4</th>\n",
@@ -339,13 +348,13 @@
       "text/plain": [
        "                         tissue_type tumour_type\n",
        "simulated_sample_0    Breast-AdenoCA     primary\n",
-       "simulated_sample_1    Breast-AdenoCA     primary\n",
-       "simulated_sample_2  ColoRect-AdenoCA     primary\n",
-       "simulated_sample_3  ColoRect-AdenoCA  metastatic\n",
+       "simulated_sample_1  ColoRect-AdenoCA     primary\n",
+       "simulated_sample_2        Kidney-RCC  metastatic\n",
+       "simulated_sample_3        Kidney-RCC     primary\n",
        "simulated_sample_4        Kidney-RCC  metastatic"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +601,7 @@
        "max                          0.996766  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
